# MultiThreadLabWork

./: datageneration.json
Lab1a/src/: main.go
Lab1b/: .gitignore  CMakeLists.txt  Paulius_Ratkevicius_L1_dat_1.json  main  main.cpp
Lab2/src/: main.go
Lab2/src/lab1/: main.go
Lab3/: IFK-7_DimsaNojus_L3a.cu  IFK-7_DimsaNojus_L3b.cu  PRatkevicius_Lab3a.cu  PRatkevicius_Lab3b.cu  a.out  jsontest.cpp
data/: Paulius_Ratkevicius_L1_dat_1.json  Paulius_Ratkevicius_L1_dat_1Res.json  Paulius_Ratkevicius_L1_dat_1_Res.json  Paulius_Ratkevicius_L1_dat_1_Res3.json  Paulius_Ratkevicius_L1_dat_1_ResPlain.txt  Paulius_Ratkevicius_L1_dat_2.json  Paulius_Ratkevicius_L1_dat_2_Res.json  Paulius_Ratkevicius_L1_dat_3.json  Paulius_Ratkevicius_L1_res.json  Paulius_Ratkevicius_L1_resL2.json
